<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project basedir="." default="build" name="c4j_web_Issue">
    <property environment="env"/>
    <property name="debuglevel" value="source,lines,vars"/>
    <property name="target" value="21"/>
    <property name="source" value="21"/>
    
    <!-- Custom property for Tomcat libraries -->
    <property name="tomcat.lib.dir" value="../../../../tools/apache-tomcat-11.0.7 (Java 21)/lib"/>
    
    <path id="Web App Libraries.libraryclasspath">
        <fileset dir="src/main/webapp/WEB-INF/lib">
            <include name="**/*.jar"/>
        </fileset>
    </path>
    <path id="EAR Libraries.libraryclasspath"/>
    
    <path id="Server Runtime [Apache Tomcat v11.0].libraryclasspath">
        <fileset dir="${tomcat.lib.dir}">
            <include name="**/*.jar"/>
        </fileset>
    </path>
    
    <path id="c4j_web_Issue.classpath">
        <pathelement location="build/classes"/>
        <path refid="Web App Libraries.libraryclasspath"/>
        <path refid="EAR Libraries.libraryclasspath"/>
        <path refid="Server Runtime [Apache Tomcat v11.0].libraryclasspath"/>
    </path>
    <target name="init">
        <mkdir dir="build/classes"/>
        <copy includeemptydirs="false" todir="build/classes">
            <fileset dir="src/main/java">
                <exclude name="**/*.launch"/>
                <exclude name="**/*.java"/>
            </fileset>
        </copy>
    </target>
    <target name="clean">
        <delete dir="build/classes"/>
    </target>
    <target depends="clean" name="cleanall"/>
    <target depends="build-subprojects,build-project" name="build"/>
    <target name="build-subprojects"/>
    <target depends="init" name="build-project">
        <echo message="${ant.project.name}: ${ant.file}"/>
        <javac debug="true" debuglevel="${debuglevel}" destdir="build/classes" includeantruntime="false" source="${source}" target="${target}">
            <src path="src/main/java"/>
            <classpath refid="c4j_web_Issue.classpath"/>
             <compilerarg value="-proc:full"/>
        </javac>
    </target>
    <target description="Build all projects which reference this project. Useful to propagate changes." name="build-refprojects"/>
                <target name="war" depends="build">
                    <war destfile="target/c4j_web_Issue.war" webxml="src/main/webapp/WEB-INF/web.xml">
                        <fileset dir="src/main/webapp"/>
                        <lib dir="src/main/webapp/WEB-INF/lib"/>
                        <classes dir="build/classes"/>
                    </war>
                </target>
</project>
